@@ -1,4 +1,4 @@
-This repository assembles the jar files required to use [GraalJS][graaljs] on a [stock JDK][graaljs-on-stock-jdk] in the [JOSM Scripting Plugin][scripting-plugin].
+This repository assembles the jar files required to use [GraalJS][graaljs] on a [stock JDK][graaljs-on-stock-jdk] or with the [GraalVM for JDK 21][graalvm-jdk21] in the [JOSM Scripting Plugin][scripting-plugin].
 
 Available Releases:
 
@@ -8,12 +8,13 @@ Available Releases:
 *  GraalJS 22.1.0: [graaljs-22.1.0.zip](https://github.com/Gubaer/josm-scripting-plugin-graaljs/releases/download/22.1.0/graaljs-22.1.0.zip)
 
 
-
 # How to use
 
 1. Download an available release
 
 2. Unzip in a directory
+
+## Until GraalJS version 23.0.2
 
 3. On Linux, run JOSM as follows:
    ```bash
@@ -28,12 +29,30 @@ Available Releases:
    C:\> java -jar `
       --module-path "\path\to\graaljs\jars" `
       --add-modules org.graalvm.sdk,org.graalvm.js,com.oracle.truffle.regex,org.graalvm.truffle `
-      josm-tested.jar
+      josm-latest.jar
+   ```
+
+## Starting with GraalJS version 23.1.0
+
+On Linux, run JOSM as follows:
+   ```bash
+   $ java -jar \
+      --module-path "/path/to/graaljs/jars" \
+      --add-modules org.graalvm.polyglot,org.graalvm.word,org.graalvm.collections \
+      josm-latest.jar
+   ```
+
+On Windows, run JOSM as follows:
+   ```powershell
+   C:\> java -jar `
+      --module-path "\path\to\graaljs\jars" `
+      --add-modules org.graalvm.polyglot,org.graalvm.word,org.graalvm.collections `
+      josm-latest.jar
    ```
 
 
-Then start [JOSM][JOSM] with a stock JDK (i.e. the [OpenJDK][openjdk]) and install the
-[JOSM Scripting Plugin][scripting-plugin]. GraalJS is then available as a scripting engine in the JOSM Scripting Plugin.
+Start [JOSM][JOSM] with a stock JDK (i.e. the [OpenJDK][openjdk]) and install the
+[JOSM Scripting Plugin][scripting-plugin]. GraalJS is then available as a scripting engine.
 
 
 [scripting-plugin]:https://gubaer.github.io/josm-scripting-plugin/
@@ -41,3 +60,4 @@ Then start [JOSM][JOSM] with a stock JDK (i.e. the [OpenJDK][openjdk]) and insta
 [graaljs-on-stock-jdk]:https://www.graalvm.org/22.1/reference-manual/js/RunOnJDK/
 [JOSM]:https://josm.openstreetmap.de/
 [openjdk]: https://openjdk.java.net/
+[graalvm-jdk21]: https://www.graalvm.org/release-notes/JDK_21/
